--- a/web_simulation/src/index.css
+++ b/web_simulation/src/index.css
@@ -2,6 +2,8 @@
   --bg: #24242C;
   --main-color: oklch(100% 0 0 / 0.87);
 
+  --elevation2: 0px 3px 3px -2px rgba(0,0,0,0.2), 0px 3px 4px 0px rgba(0,0,0,0.14), 0px 1px 8px 0px rgba(0,0,0,0.12);
+
   font-family: system-ui, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -25,7 +27,7 @@ body {
   justify-content: start;
   background: #AAA1;
   border-radius: 6px;
-  box-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2), 0px 3px 4px 0px rgba(0,0,0,0.14), 0px 1px 8px 0px rgba(0,0,0,0.12)
+  box-shadow: var(--elevation2) ;
 }
 
 .input-sliders {
@@ -75,7 +77,7 @@ body {
 }
 .btn.stop {
   min-width: 9ch;
-  background-color: rgb(255, 177, 9);
+  background-color: #f57c00;
   transition: background-color 150ms ease-in-out;
 }
 .btn.step {
@@ -100,7 +102,7 @@ canvas {
 .plot {
   border-radius: 6px;
   overflow: hidden;
-  box-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2), 0px 3px 4px 0px rgba(0,0,0,0.14), 0px 1px 8px 0px rgba(0,0,0,0.12)
+  box-shadow: var(--elevation2);
 }
 
 .color-wheel{
